--- a/bmi_calc/src/App.css
+++ b/bmi_calc/src/App.css
@@ -19,3 +19,36 @@
   border-radius: 6px;
   padding: 1rem;
 }
+
+input {
+  width: 100%;
+  padding: 8px 2px;
+  margin: 8px 0;
+  border-radius: 10px;
+}
+
+.btn-submit,
+.btn-reload {
+  display: block;
+  width: 100%;
+  padding: 8px 0px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  color: white;
+  font-size: 1.2rem;
+  background-color: black;
+}
+
+.btn-reload {
+  background-color: white;
+  color: #333;
+}
+
+p {
+  margin: 10px 0px;
+}
+
+.img-show {
+  height: 200px;
+  align-items: center;
+}
