--- a/bmi_calc/src/App.css
+++ b/bmi_calc/src/App.css
@@ -3,7 +3,7 @@
 .App{
   width:100%;
   height: 100%;
-  background-color: red;
+  background-color: DarkRed;
 }
 /* .App {
   display: flex;
@@ -16,11 +16,11 @@
 
 .title-container{  
   float:left;
-  width:30px;
-  margin-left:150px;
-  margin-top:180px;
-  margin-right:400px;
- 
+  width:300px;
+  height: 60px;
+  margin-left:10px;
+  margin-top:60px;
+  margin-right:200px; 
 }
 .title-txt{
   text-shadow: 3px 3px #efeff3;
@@ -30,63 +30,25 @@
 }
 
 .main-container {
+  
   width:50%;
-  margin-left:600px; /*temporal*/ 
+  margin-left:300px; 
   box-shadow: 0px 0px 2px;
   border-radius: 6px;
-  padding: 1rem;
+  padding: 0rem; /* this changed*/
   height: 100%;
 }
 .name_labels {
+  color: white;
+  position:relative;
+  right:150px;
+  top: 100px;
   display: inline-block;
-  vertical-align: middle;
+  /* vertical-align: right; */
   width: 40%;
 }
-
-.frm {
-  width:40%;
-  display: inline-block;
-  vertical-align: middle;
-}
-.btn-submit,
-.btn-reload {
-  display: inline-block;
-  width: auto;
-  padding: 8px 8px;
-  margin-bottom: 30px;
-  border-radius: 10px;
-  color: white;
-  font-size: 0.8rem;
-  background-color: black;
-}
-
-.btn-reload {
-  margin-right: 10px;
-  margin-left:10px;
-}
-
-.btn-submit {
-  margin-left: 30px;
-}
-
-label {
-  display: inline;
-}
-
-input{ 
-  width: 70%; /* okay */
-  display:grid;
-  padding: 8px 2px;
-  margin: 8px 0;
-  border-radius: 10px;
-}
-
-p {
-  margin: 10px 0px;
-}
-
 .img-show {
-  
+  display: inline-block;  
   box-shadow: 0px 0px 5px;
   border-radius: 5px;
   padding: 0.75rem;
@@ -106,4 +68,69 @@ p {
 
 .img-show img {
   align-items: center;
+}
+
+.frm {
+  position:relative;
+  left:350px;
+  bottom:350px;
+
+  width:40%;
+  display: inline-block;
+  vertical-align: middle;
+}
+.btn-submit,
+.btn-reload,.output-data{
+  display: inline-block;
+  width: auto;
+  padding: 8px 8px;
+  margin-bottom: 30px;
+  border-radius: 5px;
+  color: white;
+  font-size: 0.8rem;
+  background-color:firebrick;
+}
+
+.btn-reload {
+  margin-right: 10px;
+  margin-left:10px;
+}
+
+.btn-submit {
+  margin-left: 30px;
+}
+.patient_data{
+  position:relative;
+  bottom:300px;
+  left:250px;
+  
+}
+.after-patient-data-h2{
+  position:relative;
+  bottom:280px;
+  left:0px;
+}
+.data-title-h2{
+  position:relative;
+  bottom:290px;
+  left:200px;
+  color: white;
+
+}
+
+
+label {
+  display: inline;
+}
+
+input{ 
+  width: 70%; /* okay */
+  display:grid;
+  padding: 8px 2px;
+  margin: 8px 0;
+  border-radius: 10px;
+}
+
+p {
+  margin: 10px 0px;
 }
