--- a/bmi_calc/src/App.css
+++ b/bmi_calc/src/App.css
@@ -1,136 +1,125 @@
-
-
-.App{
-  width:100%;
-  height: 100%;
-  background-color: DarkRed;
-}
-/* .App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items:center;
+/* General Styles */
+.App {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
   width: 100%;
-  height: 100vh;
-} */
-
-.title-container{  
-  float:left;
-  width:300px;
-  height: 60px;
-  margin-left:10px;
-  margin-top:60px;
-  margin-right:200px; 
+  height: 100%;
+  background-color: firebrick;
 }
-.title-txt{
-  text-shadow: 3px 3px #efeff3;
-  
-  font-family: cursive;
 
+.title-container {
+  float: left;
+  width: 100%;
+  height: auto;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.title-txt {
+  text-shadow: 3px 3px #efeff3;
+  font-family: cursive;
+}
+.how-to-use-note, .enjoy{
+  color: #fff;
+  text-align: justify;
+  margin-left:20px;
+  margin-top:100px;
 }
 
 .main-container {
-  
-  width:50%;
-  margin-left:300px; 
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  width: 90%;
+  margin: 20px auto;
   box-shadow: 0px 0px 2px;
   border-radius: 6px;
-  padding: 0rem; /* this changed*/
-  height: 100%;
+  padding: 1rem;
 }
+
 .name_labels {
   color: white;
-  position:relative;
-  right:150px;
-  top: 100px;
-  display: inline-block;
-  /* vertical-align: right; */
-  width: 40%;
+  width: 100%;
+  margin-right: 0;
+  text-align: center;
 }
+
 .img-show {
-  display: inline-block;  
   box-shadow: 0px 0px 5px;
   border-radius: 5px;
   padding: 0.75rem;
-  height: 350px;
-  width:80%;
+  height: auto;
+  width: 100%;
   background-color: azure;
 }
 
-.img-show p {
-  text-align: center;
-}
-
+.img-show p,
 .img-show h3 {
   text-align: center;
-  align-content: center;
 }
 
 .img-show img {
-  align-items: center;
+  width: 100%;
+  height: auto;
 }
 
 .frm {
-  position:relative;
-  left:350px;
-  bottom:350px;
-
-  width:40%;
-  display: inline-block;
-  vertical-align: middle;
+  position: relative;
+  width: 100%;
+  margin: 20px 0;
 }
+
+/* Buttons and Inputs */
 .btn-submit,
-.btn-reload,.output-data{
-  display: inline-block;
-  width: auto;
+.btn-reload,
+.output-data {
+  display: block;
+  width: 100%;
   padding: 8px 8px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   border-radius: 5px;
   color: white;
   font-size: 0.8rem;
-  background-color:firebrick;
+  background-color: firebrick;
 }
 
 .btn-reload {
-  margin-right: 10px;
-  margin-left:10px;
+  margin-right: 0;
+  margin-left: 0;
 }
 
 .btn-submit {
-  margin-left: 30px;
+  margin-left: 0;
 }
-.patient_data{
-  position:relative;
-  bottom:300px;
-  left:250px;
-  
-}
-.after-patient-data-h2{
-  position:relative;
-  bottom:280px;
-  left:0px;
-}
-.data-title-h2{
-  position:relative;
-  bottom:290px;
-  left:200px;
-  color: white;
-
-}
-
 
 label {
-  display: inline;
+  display: block;
+  text-align: center;
 }
 
-input{ 
-  width: 70%; /* okay */
-  display:grid;
-  padding: 8px 2px;
+input {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 8px 10px;
   margin: 8px 0;
   border-radius: 10px;
 }
 
 p {
-  margin: 10px 0px;
+  margin: 10px 0;
+}
+
+/* Media Queries for Mobile Responsiveness */
+@media (min-width: 768px) {
+  .name_labels {
+    width: 40%;
+    margin-right: 150px;
+    text-align: left;
+  }
+
+  .frm {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 50%;
+  }
 }
